# intellspend

./: README.md  plan.md
backend/: .gitignore  alembic.ini  migrate_account_books.py  migrate_name.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4869f1dc42d5_create_initial_tables.py  a3f2c1d8e9b0_add_due_date_bill_month_to_bills.py  b7e4d2f1a8c3_add_name_to_users.py  c1a9b7b0b9a1_empty_message.py  d4f8a2c6e1b0_account_books_many_to_many.py
backend/app/: main.py
backend/app/api/endpoints/: accounts.py  auth.py  bills.py  books.py  categories.py  chat.py  transactions.py  users.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  account.py  balance.py  bill.py  book.py  category.py  chat.py  transaction.py  user.py
backend/app/db/: base.py  session.py
backend/app/models/: account.py  bill.py  book.py  category.py  chat.py  transaction.py  user.py
backend/app/schemas/: account.py  balance.py  bill.py  book.py  category.py  chat.py  transaction.py  user.py
backend/app/services/: ai_context.py  openrouter.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(main)/: layout.tsx
frontend/components/: AuthGuard.tsx  sidebar.tsx  withAuth.tsx
frontend/components/dashboard/: AccountCard.tsx  AddTransactionModal.tsx  (+8 more)
frontend/contexts/: AuthContext.tsx  BookContext.tsx  PreferencesContext.tsx
frontend/hooks/: useDashboardData.ts
frontend/lib/: api.ts  format.ts  preferences.ts  session.ts  types.ts
(+16 files in other folders)
